Codigo_Fuente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    EQUALS
    EQUAL_EQUAL
    GREATER_THAN
    GREATER_THAN_EQUAL
    LESS_THAN
    LESS_THAN_EQUAL
    NOT_EQUAL
    NUMBER
    POT
    RESERVED_WORD

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements SEMICOLON statement
Rule 3     statements -> statements LBRACE statements RBRACE
Rule 4     statements -> statements statement
Rule 5     statement -> assignment_after_declaration
Rule 6     statement -> variable_declaration
Rule 7     statement -> expression_assignment
Rule 8     statement -> if_statement
Rule 9     statement -> for_loop
Rule 10    statement -> while_loop
Rule 11    statement -> println_statement
Rule 12    statement -> show_statement
Rule 13    statement -> geo_statement
Rule 14    geo_statement -> GEO IDENTIFICADOR LPAREN expression_list RPAREN
Rule 15    assignment_after_declaration -> IDENTIFICADOR ASSIGN expression
Rule 16    variable_declaration -> datatype IDENTIFICADOR ASSIGN expression
Rule 17    variable_declaration -> datatype IDENTIFICADOR
Rule 18    variable_declaration -> datatype LBRACKET RBRACKET IDENTIFICADOR ASSIGN LBRACE expression_list RBRACE
Rule 19    expression_list -> expression
Rule 20    expression_list -> expression COMMAS expression_list
Rule 21    expression_assignment -> IDENTIFICADOR ASSIGN expression
Rule 22    datatype -> INT
Rule 23    datatype -> FLOAT
Rule 24    datatype -> STRING
Rule 25    datatype -> BOOL
Rule 26    expression -> INT
Rule 27    expression -> FLOAT
Rule 28    expression -> STRING
Rule 29    expression -> IDENTIFICADOR
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression MINUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> expression GT expression
Rule 35    expression -> expression LT expression
Rule 36    expression -> expression GE expression
Rule 37    expression -> expression LE expression
Rule 38    expression -> expression EQ expression
Rule 39    expression -> expression NE expression
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    expression -> MINUS expression
Rule 42    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 43    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 44    show_statement -> SHOW MESSAGE_DIALOG LPAREN STRING RPAREN SEMICOLON
Rule 45    for_loop -> FOR LPAREN assignment_after_declaration SEMICOLON expression SEMICOLON expression RPAREN LBRACE statements RBRACE
Rule 46    while_loop -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 47    while_loop -> WHILE LPAREN expression RPAREN statement
Rule 48    while_loop -> WHILE LPAREN assignment_after_declaration RPAREN SEMICOLON LBRACE statements RBRACE
Rule 49    println_statement -> PRINTLN LPAREN expression RPAREN SEMICOLON
Rule 50    println_statement -> PRINTLN LPAREN IDENTIFICADOR RPAREN SEMICOLON
Rule 51    println_statement -> PRINTLN LPAREN STRING RPAREN SEMICOLON

Terminals, with rules where they appear

ASSIGN               : 15 16 18 21
BOOL                 : 25
COMMAS               : 20
COMMENT              : 
DIVIDE               : 33
ELSE                 : 43
EQ                   : 38
EQUALS               : 
EQUAL_EQUAL          : 
FLOAT                : 23 27
FOR                  : 45
GE                   : 36
GEO                  : 14
GREATER_THAN         : 
GREATER_THAN_EQUAL   : 
GT                   : 34
IDENTIFICADOR        : 14 15 16 17 18 21 29 50
IF                   : 42 43
INT                  : 22 26
LBRACE               : 3 18 42 43 43 45 46 48
LBRACKET             : 18
LE                   : 37
LESS_THAN            : 
LESS_THAN_EQUAL      : 
LPAREN               : 14 40 42 43 44 45 46 47 48 49 50 51
LT                   : 35
MESSAGE_DIALOG       : 44
MINUS                : 31 41
NE                   : 39
NOT_EQUAL            : 
NUMBER               : 
PLUS                 : 30
POT                  : 
PRINTLN              : 49 50 51
RBRACE               : 3 18 42 43 43 45 46 48
RBRACKET             : 18
RESERVED_WORD        : 
RPAREN               : 14 40 42 43 44 45 46 47 48 49 50 51
SEMICOLON            : 2 44 45 45 48 49 50 51
SHOW                 : 44
STRING               : 24 28 44 51
TIMES                : 32
WHILE                : 46 47 48
error                : 

Nonterminals, with rules where they appear

assignment_after_declaration : 5 45 48
datatype             : 16 17 18
expression           : 15 16 19 20 21 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 43 45 45 46 47 49
expression_assignment : 7
expression_list      : 14 18 20
for_loop             : 9
geo_statement        : 13
if_statement         : 8
println_statement    : 11
show_statement       : 12
statement            : 1 2 4 47
statements           : 2 3 3 4 42 43 43 45 46 48 0
variable_declaration : 6
while_loop           : 10

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements SEMICOLON statement
    (3) statements -> . statements LBRACE statements RBRACE
    (4) statements -> . statements statement
    (5) statement -> . assignment_after_declaration
    (6) statement -> . variable_declaration
    (7) statement -> . expression_assignment
    (8) statement -> . if_statement
    (9) statement -> . for_loop
    (10) statement -> . while_loop
    (11) statement -> . println_statement
    (12) statement -> . show_statement
    (13) statement -> . geo_statement
    (15) assignment_after_declaration -> . IDENTIFICADOR ASSIGN expression
    (16) variable_declaration -> . datatype IDENTIFICADOR ASSIGN expression
    (17) variable_declaration -> . datatype IDENTIFICADOR
    (18) variable_declaration -> . datatype LBRACKET RBRACKET IDENTIFICADOR ASSIGN LBRACE expression_list RBRACE
    (21) expression_assignment -> . IDENTIFICADOR ASSIGN expression
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (43) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (45) for_loop -> . FOR LPAREN assignment_after_declaration SEMICOLON expression SEMICOLON expression RPAREN LBRACE statements RBRACE
    (46) while_loop -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (47) while_loop -> . WHILE LPAREN expression RPAREN statement
    (48) while_loop -> . WHILE LPAREN assignment_after_declaration RPAREN SEMICOLON LBRACE statements RBRACE
    (49) println_statement -> . PRINTLN LPAREN expression RPAREN SEMICOLON
    (50) println_statement -> . PRINTLN LPAREN IDENTIFICADOR RPAREN SEMICOLON
    (51) println_statement -> . PRINTLN LPAREN STRING RPAREN SEMICOLON
    (44) show_statement -> . SHOW MESSAGE_DIALOG LPAREN STRING RPAREN SEMICOLON
    (14) geo_statement -> . GEO IDENTIFICADOR LPAREN expression_list RPAREN
    (22) datatype -> . INT
    (23) datatype -> . FLOAT
    (24) datatype -> . STRING
    (25) datatype -> . BOOL

    IDENTIFICADOR   shift and go to state 12
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    PRINTLN         shift and go to state 17
    SHOW            shift and go to state 19
    GEO             shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 18
    BOOL            shift and go to state 23

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    assignment_after_declaration   shift and go to state 3
    variable_declaration           shift and go to state 4
    expression_assignment          shift and go to state 5
    if_statement                   shift and go to state 6
    for_loop                       shift and go to state 7
    while_loop                     shift and go to state 8
    println_statement              shift and go to state 9
    show_statement                 shift and go to state 10
    geo_statement                  shift and go to state 11
    datatype                       shift and go to state 13

state 1

    (0) S' -> statements .
    (2) statements -> statements . SEMICOLON statement
    (3) statements -> statements . LBRACE statements RBRACE
    (4) statements -> statements . statement
    (5) statement -> . assignment_after_declaration
    (6) statement -> . variable_declaration
    (7) statement -> . expression_assignment
    (8) statement -> . if_statement
    (9) statement -> . for_loop
    (10) statement -> . while_loop
    (11) statement -> . println_statement
    (12) statement -> . show_statement
    (13) statement -> . geo_statement
    (15) assignment_after_declaration -> . IDENTIFICADOR ASSIGN expression
    (16) variable_declaration -> . datatype IDENTIFICADOR ASSIGN expression
    (17) variable_declaration -> . datatype IDENTIFICADOR
    (18) variable_declaration -> . datatype LBRACKET RBRACKET IDENTIFICADOR ASSIGN LBRACE expression_list RBRACE
    (21) expression_assignment -> . IDENTIFICADOR ASSIGN expression
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (43) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (45) for_loop -> . FOR LPAREN assignment_after_declaration SEMICOLON expression SEMICOLON expression RPAREN LBRACE statements RBRACE
    (46) while_loop -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (47) while_loop -> . WHILE LPAREN expression RPAREN statement
    (48) while_loop -> . WHILE LPAREN assignment_after_declaration RPAREN SEMICOLON LBRACE statements RBRACE
    (49) println_statement -> . PRINTLN LPAREN expression RPAREN SEMICOLON
    (50) println_statement -> . PRINTLN LPAREN IDENTIFICADOR RPAREN SEMICOLON
    (51) println_statement -> . PRINTLN LPAREN STRING RPAREN SEMICOLON
    (44) show_statement -> . SHOW MESSAGE_DIALOG LPAREN STRING RPAREN SEMICOLON
    (14) geo_statement -> . GEO IDENTIFICADOR LPAREN expression_list RPAREN
    (22) datatype -> . INT
    (23) datatype -> . FLOAT
    (24) datatype -> . STRING
    (25) datatype -> . BOOL

    SEMICOLON       shift and go to state 24
    LBRACE          shift and go to state 26
    IDENTIFICADOR   shift and go to state 12
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    PRINTLN         shift and go to state 17
    SHOW            shift and go to state 19
    GEO             shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 18
    BOOL            shift and go to state 23

    statement                      shift and go to state 25
    assignment_after_declaration   shift and go to state 3
    variable_declaration           shift and go to state 4
    expression_assignment          shift and go to state 5
    if_statement                   shift and go to state 6
    for_loop                       shift and go to state 7
    while_loop                     shift and go to state 8
    println_statement              shift and go to state 9
    show_statement                 shift and go to state 10
    geo_statement                  shift and go to state 11
    datatype                       shift and go to state 13

state 2

    (1) statements -> statement .

    SEMICOLON       reduce using rule 1 (statements -> statement .)
    LBRACE          reduce using rule 1 (statements -> statement .)
    IDENTIFICADOR   reduce using rule 1 (statements -> statement .)
    IF              reduce using rule 1 (statements -> statement .)
    FOR             reduce using rule 1 (statements -> statement .)
    WHILE           reduce using rule 1 (statements -> statement .)
    PRINTLN         reduce using rule 1 (statements -> statement .)
    SHOW            reduce using rule 1 (statements -> statement .)
    GEO             reduce using rule 1 (statements -> statement .)
    INT             reduce using rule 1 (statements -> statement .)
    FLOAT           reduce using rule 1 (statements -> statement .)
    STRING          reduce using rule 1 (statements -> statement .)
    BOOL            reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)
    RBRACE          reduce using rule 1 (statements -> statement .)


state 3

    (5) statement -> assignment_after_declaration .

    SEMICOLON       reduce using rule 5 (statement -> assignment_after_declaration .)
    LBRACE          reduce using rule 5 (statement -> assignment_after_declaration .)
    IDENTIFICADOR   reduce using rule 5 (statement -> assignment_after_declaration .)
    IF              reduce using rule 5 (statement -> assignment_after_declaration .)
    FOR             reduce using rule 5 (statement -> assignment_after_declaration .)
    WHILE           reduce using rule 5 (statement -> assignment_after_declaration .)
    PRINTLN         reduce using rule 5 (statement -> assignment_after_declaration .)
    SHOW            reduce using rule 5 (statement -> assignment_after_declaration .)
    GEO             reduce using rule 5 (statement -> assignment_after_declaration .)
    INT             reduce using rule 5 (statement -> assignment_after_declaration .)
    FLOAT           reduce using rule 5 (statement -> assignment_after_declaration .)
    STRING          reduce using rule 5 (statement -> assignment_after_declaration .)
    BOOL            reduce using rule 5 (statement -> assignment_after_declaration .)
    $end            reduce using rule 5 (statement -> assignment_after_declaration .)
    RBRACE          reduce using rule 5 (statement -> assignment_after_declaration .)


state 4

    (6) statement -> variable_declaration .

    SEMICOLON       reduce using rule 6 (statement -> variable_declaration .)
    LBRACE          reduce using rule 6 (statement -> variable_declaration .)
    IDENTIFICADOR   reduce using rule 6 (statement -> variable_declaration .)
    IF              reduce using rule 6 (statement -> variable_declaration .)
    FOR             reduce using rule 6 (statement -> variable_declaration .)
    WHILE           reduce using rule 6 (statement -> variable_declaration .)
    PRINTLN         reduce using rule 6 (statement -> variable_declaration .)
    SHOW            reduce using rule 6 (statement -> variable_declaration .)
    GEO             reduce using rule 6 (statement -> variable_declaration .)
    INT             reduce using rule 6 (statement -> variable_declaration .)
    FLOAT           reduce using rule 6 (statement -> variable_declaration .)
    STRING          reduce using rule 6 (statement -> variable_declaration .)
    BOOL            reduce using rule 6 (statement -> variable_declaration .)
    $end            reduce using rule 6 (statement -> variable_declaration .)
    RBRACE          reduce using rule 6 (statement -> variable_declaration .)


state 5

    (7) statement -> expression_assignment .

    SEMICOLON       reduce using rule 7 (statement -> expression_assignment .)
    LBRACE          reduce using rule 7 (statement -> expression_assignment .)
    IDENTIFICADOR   reduce using rule 7 (statement -> expression_assignment .)
    IF              reduce using rule 7 (statement -> expression_assignment .)
    FOR             reduce using rule 7 (statement -> expression_assignment .)
    WHILE           reduce using rule 7 (statement -> expression_assignment .)
    PRINTLN         reduce using rule 7 (statement -> expression_assignment .)
    SHOW            reduce using rule 7 (statement -> expression_assignment .)
    GEO             reduce using rule 7 (statement -> expression_assignment .)
    INT             reduce using rule 7 (statement -> expression_assignment .)
    FLOAT           reduce using rule 7 (statement -> expression_assignment .)
    STRING          reduce using rule 7 (statement -> expression_assignment .)
    BOOL            reduce using rule 7 (statement -> expression_assignment .)
    $end            reduce using rule 7 (statement -> expression_assignment .)
    RBRACE          reduce using rule 7 (statement -> expression_assignment .)


state 6

    (8) statement -> if_statement .

    SEMICOLON       reduce using rule 8 (statement -> if_statement .)
    LBRACE          reduce using rule 8 (statement -> if_statement .)
    IDENTIFICADOR   reduce using rule 8 (statement -> if_statement .)
    IF              reduce using rule 8 (statement -> if_statement .)
    FOR             reduce using rule 8 (statement -> if_statement .)
    WHILE           reduce using rule 8 (statement -> if_statement .)
    PRINTLN         reduce using rule 8 (statement -> if_statement .)
    SHOW            reduce using rule 8 (statement -> if_statement .)
    GEO             reduce using rule 8 (statement -> if_statement .)
    INT             reduce using rule 8 (statement -> if_statement .)
    FLOAT           reduce using rule 8 (statement -> if_statement .)
    STRING          reduce using rule 8 (statement -> if_statement .)
    BOOL            reduce using rule 8 (statement -> if_statement .)
    $end            reduce using rule 8 (statement -> if_statement .)
    RBRACE          reduce using rule 8 (statement -> if_statement .)


state 7

    (9) statement -> for_loop .

    SEMICOLON       reduce using rule 9 (statement -> for_loop .)
    LBRACE          reduce using rule 9 (statement -> for_loop .)
    IDENTIFICADOR   reduce using rule 9 (statement -> for_loop .)
    IF              reduce using rule 9 (statement -> for_loop .)
    FOR             reduce using rule 9 (statement -> for_loop .)
    WHILE           reduce using rule 9 (statement -> for_loop .)
    PRINTLN         reduce using rule 9 (statement -> for_loop .)
    SHOW            reduce using rule 9 (statement -> for_loop .)
    GEO             reduce using rule 9 (statement -> for_loop .)
    INT             reduce using rule 9 (statement -> for_loop .)
    FLOAT           reduce using rule 9 (statement -> for_loop .)
    STRING          reduce using rule 9 (statement -> for_loop .)
    BOOL            reduce using rule 9 (statement -> for_loop .)
    $end            reduce using rule 9 (statement -> for_loop .)
    RBRACE          reduce using rule 9 (statement -> for_loop .)


state 8

    (10) statement -> while_loop .

    SEMICOLON       reduce using rule 10 (statement -> while_loop .)
    LBRACE          reduce using rule 10 (statement -> while_loop .)
    IDENTIFICADOR   reduce using rule 10 (statement -> while_loop .)
    IF              reduce using rule 10 (statement -> while_loop .)
    FOR             reduce using rule 10 (statement -> while_loop .)
    WHILE           reduce using rule 10 (statement -> while_loop .)
    PRINTLN         reduce using rule 10 (statement -> while_loop .)
    SHOW            reduce using rule 10 (statement -> while_loop .)
    GEO             reduce using rule 10 (statement -> while_loop .)
    INT             reduce using rule 10 (statement -> while_loop .)
    FLOAT           reduce using rule 10 (statement -> while_loop .)
    STRING          reduce using rule 10 (statement -> while_loop .)
    BOOL            reduce using rule 10 (statement -> while_loop .)
    $end            reduce using rule 10 (statement -> while_loop .)
    RBRACE          reduce using rule 10 (statement -> while_loop .)


state 9

    (11) statement -> println_statement .

    SEMICOLON       reduce using rule 11 (statement -> println_statement .)
    LBRACE          reduce using rule 11 (statement -> println_statement .)
    IDENTIFICADOR   reduce using rule 11 (statement -> println_statement .)
    IF              reduce using rule 11 (statement -> println_statement .)
    FOR             reduce using rule 11 (statement -> println_statement .)
    WHILE           reduce using rule 11 (statement -> println_statement .)
    PRINTLN         reduce using rule 11 (statement -> println_statement .)
    SHOW            reduce using rule 11 (statement -> println_statement .)
    GEO             reduce using rule 11 (statement -> println_statement .)
    INT             reduce using rule 11 (statement -> println_statement .)
    FLOAT           reduce using rule 11 (statement -> println_statement .)
    STRING          reduce using rule 11 (statement -> println_statement .)
    BOOL            reduce using rule 11 (statement -> println_statement .)
    $end            reduce using rule 11 (statement -> println_statement .)
    RBRACE          reduce using rule 11 (statement -> println_statement .)


state 10

    (12) statement -> show_statement .

    SEMICOLON       reduce using rule 12 (statement -> show_statement .)
    LBRACE          reduce using rule 12 (statement -> show_statement .)
    IDENTIFICADOR   reduce using rule 12 (statement -> show_statement .)
    IF              reduce using rule 12 (statement -> show_statement .)
    FOR             reduce using rule 12 (statement -> show_statement .)
    WHILE           reduce using rule 12 (statement -> show_statement .)
    PRINTLN         reduce using rule 12 (statement -> show_statement .)
    SHOW            reduce using rule 12 (statement -> show_statement .)
    GEO             reduce using rule 12 (statement -> show_statement .)
    INT             reduce using rule 12 (statement -> show_statement .)
    FLOAT           reduce using rule 12 (statement -> show_statement .)
    STRING          reduce using rule 12 (statement -> show_statement .)
    BOOL            reduce using rule 12 (statement -> show_statement .)
    $end            reduce using rule 12 (statement -> show_statement .)
    RBRACE          reduce using rule 12 (statement -> show_statement .)


state 11

    (13) statement -> geo_statement .

    SEMICOLON       reduce using rule 13 (statement -> geo_statement .)
    LBRACE          reduce using rule 13 (statement -> geo_statement .)
    IDENTIFICADOR   reduce using rule 13 (statement -> geo_statement .)
    IF              reduce using rule 13 (statement -> geo_statement .)
    FOR             reduce using rule 13 (statement -> geo_statement .)
    WHILE           reduce using rule 13 (statement -> geo_statement .)
    PRINTLN         reduce using rule 13 (statement -> geo_statement .)
    SHOW            reduce using rule 13 (statement -> geo_statement .)
    GEO             reduce using rule 13 (statement -> geo_statement .)
    INT             reduce using rule 13 (statement -> geo_statement .)
    FLOAT           reduce using rule 13 (statement -> geo_statement .)
    STRING          reduce using rule 13 (statement -> geo_statement .)
    BOOL            reduce using rule 13 (statement -> geo_statement .)
    $end            reduce using rule 13 (statement -> geo_statement .)
    RBRACE          reduce using rule 13 (statement -> geo_statement .)


state 12

    (15) assignment_after_declaration -> IDENTIFICADOR . ASSIGN expression
    (21) expression_assignment -> IDENTIFICADOR . ASSIGN expression

    ASSIGN          shift and go to state 27


state 13

    (16) variable_declaration -> datatype . IDENTIFICADOR ASSIGN expression
    (17) variable_declaration -> datatype . IDENTIFICADOR
    (18) variable_declaration -> datatype . LBRACKET RBRACKET IDENTIFICADOR ASSIGN LBRACE expression_list RBRACE

    IDENTIFICADOR   shift and go to state 28
    LBRACKET        shift and go to state 29


state 14

    (42) if_statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (43) if_statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 30


state 15

    (45) for_loop -> FOR . LPAREN assignment_after_declaration SEMICOLON expression SEMICOLON expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 31


state 16

    (46) while_loop -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE
    (47) while_loop -> WHILE . LPAREN expression RPAREN statement
    (48) while_loop -> WHILE . LPAREN assignment_after_declaration RPAREN SEMICOLON LBRACE statements RBRACE

    LPAREN          shift and go to state 32


state 17

    (49) println_statement -> PRINTLN . LPAREN expression RPAREN SEMICOLON
    (50) println_statement -> PRINTLN . LPAREN IDENTIFICADOR RPAREN SEMICOLON
    (51) println_statement -> PRINTLN . LPAREN STRING RPAREN SEMICOLON

    LPAREN          shift and go to state 33


state 18

    (24) datatype -> STRING .

    IDENTIFICADOR   reduce using rule 24 (datatype -> STRING .)
    LBRACKET        reduce using rule 24 (datatype -> STRING .)


state 19

    (44) show_statement -> SHOW . MESSAGE_DIALOG LPAREN STRING RPAREN SEMICOLON

    MESSAGE_DIALOG  shift and go to state 34


state 20

    (14) geo_statement -> GEO . IDENTIFICADOR LPAREN expression_list RPAREN

    IDENTIFICADOR   shift and go to state 35


state 21

    (22) datatype -> INT .

    IDENTIFICADOR   reduce using rule 22 (datatype -> INT .)
    LBRACKET        reduce using rule 22 (datatype -> INT .)


state 22

    (23) datatype -> FLOAT .

    IDENTIFICADOR   reduce using rule 23 (datatype -> FLOAT .)
    LBRACKET        reduce using rule 23 (datatype -> FLOAT .)


state 23

    (25) datatype -> BOOL .

    IDENTIFICADOR   reduce using rule 25 (datatype -> BOOL .)
    LBRACKET        reduce using rule 25 (datatype -> BOOL .)


state 24

    (2) statements -> statements SEMICOLON . statement
    (5) statement -> . assignment_after_declaration
    (6) statement -> . variable_declaration
    (7) statement -> . expression_assignment
    (8) statement -> . if_statement
    (9) statement -> . for_loop
    (10) statement -> . while_loop
    (11) statement -> . println_statement
    (12) statement -> . show_statement
    (13) statement -> . geo_statement
    (15) assignment_after_declaration -> . IDENTIFICADOR ASSIGN expression
    (16) variable_declaration -> . datatype IDENTIFICADOR ASSIGN expression
    (17) variable_declaration -> . datatype IDENTIFICADOR
    (18) variable_declaration -> . datatype LBRACKET RBRACKET IDENTIFICADOR ASSIGN LBRACE expression_list RBRACE
    (21) expression_assignment -> . IDENTIFICADOR ASSIGN expression
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (43) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (45) for_loop -> . FOR LPAREN assignment_after_declaration SEMICOLON expression SEMICOLON expression RPAREN LBRACE statements RBRACE
    (46) while_loop -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (47) while_loop -> . WHILE LPAREN expression RPAREN statement
    (48) while_loop -> . WHILE LPAREN assignment_after_declaration RPAREN SEMICOLON LBRACE statements RBRACE
    (49) println_statement -> . PRINTLN LPAREN expression RPAREN SEMICOLON
    (50) println_statement -> . PRINTLN LPAREN IDENTIFICADOR RPAREN SEMICOLON
    (51) println_statement -> . PRINTLN LPAREN STRING RPAREN SEMICOLON
    (44) show_statement -> . SHOW MESSAGE_DIALOG LPAREN STRING RPAREN SEMICOLON
    (14) geo_statement -> . GEO IDENTIFICADOR LPAREN expression_list RPAREN
    (22) datatype -> . INT
    (23) datatype -> . FLOAT
    (24) datatype -> . STRING
    (25) datatype -> . BOOL

    IDENTIFICADOR   shift and go to state 12
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    PRINTLN         shift and go to state 17
    SHOW            shift and go to state 19
    GEO             shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 18
    BOOL            shift and go to state 23

    statement                      shift and go to state 36
    assignment_after_declaration   shift and go to state 3
    variable_declaration           shift and go to state 4
    expression_assignment          shift and go to state 5
    if_statement                   shift and go to state 6
    for_loop                       shift and go to state 7
    while_loop                     shift and go to state 8
    println_statement              shift and go to state 9
    show_statement                 shift and go to state 10
    geo_statement                  shift and go to state 11
    datatype                       shift and go to state 13

state 25

    (4) statements -> statements statement .

    SEMICOLON       reduce using rule 4 (statements -> statements statement .)
    LBRACE          reduce using rule 4 (statements -> statements statement .)
    IDENTIFICADOR   reduce using rule 4 (statements -> statements statement .)
    IF              reduce using rule 4 (statements -> statements statement .)
    FOR             reduce using rule 4 (statements -> statements statement .)
    WHILE           reduce using rule 4 (statements -> statements statement .)
    PRINTLN         reduce using rule 4 (statements -> statements statement .)
    SHOW            reduce using rule 4 (statements -> statements statement .)
    GEO             reduce using rule 4 (statements -> statements statement .)
    INT             reduce using rule 4 (statements -> statements statement .)
    FLOAT           reduce using rule 4 (statements -> statements statement .)
    STRING          reduce using rule 4 (statements -> statements statement .)
    BOOL            reduce using rule 4 (statements -> statements statement .)
    $end            reduce using rule 4 (statements -> statements statement .)
    RBRACE          reduce using rule 4 (statements -> statements statement .)


state 26

    (3) statements -> statements LBRACE . statements RBRACE
    (1) statements -> . statement
    (2) statements -> . statements SEMICOLON statement
    (3) statements -> . statements LBRACE statements RBRACE
    (4) statements -> . statements statement
    (5) statement -> . assignment_after_declaration
    (6) statement -> . variable_declaration
    (7) statement -> . expression_assignment
    (8) statement -> . if_statement
    (9) statement -> . for_loop
    (10) statement -> . while_loop
    (11) statement -> . println_statement
    (12) statement -> . show_statement
    (13) statement -> . geo_statement
    (15) assignment_after_declaration -> . IDENTIFICADOR ASSIGN expression
    (16) variable_declaration -> . datatype IDENTIFICADOR ASSIGN expression
    (17) variable_declaration -> . datatype IDENTIFICADOR
    (18) variable_declaration -> . datatype LBRACKET RBRACKET IDENTIFICADOR ASSIGN LBRACE expression_list RBRACE
    (21) expression_assignment -> . IDENTIFICADOR ASSIGN expression
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (43) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (45) for_loop -> . FOR LPAREN assignment_after_declaration SEMICOLON expression SEMICOLON expression RPAREN LBRACE statements RBRACE
    (46) while_loop -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (47) while_loop -> . WHILE LPAREN expression RPAREN statement
    (48) while_loop -> . WHILE LPAREN assignment_after_declaration RPAREN SEMICOLON LBRACE statements RBRACE
    (49) println_statement -> . PRINTLN LPAREN expression RPAREN SEMICOLON
    (50) println_statement -> . PRINTLN LPAREN IDENTIFICADOR RPAREN SEMICOLON
    (51) println_statement -> . PRINTLN LPAREN STRING RPAREN SEMICOLON
    (44) show_statement -> . SHOW MESSAGE_DIALOG LPAREN STRING RPAREN SEMICOLON
    (14) geo_statement -> . GEO IDENTIFICADOR LPAREN expression_list RPAREN
    (22) datatype -> . INT
    (23) datatype -> . FLOAT
    (24) datatype -> . STRING
    (25) datatype -> . BOOL

    IDENTIFICADOR   shift and go to state 12
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    PRINTLN         shift and go to state 17
    SHOW            shift and go to state 19
    GEO             shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 18
    BOOL            shift and go to state 23

    statements                     shift and go to state 37
    statement                      shift and go to state 2
    assignment_after_declaration   shift and go to state 3
    variable_declaration           shift and go to state 4
    expression_assignment          shift and go to state 5
    if_statement                   shift and go to state 6
    for_loop                       shift and go to state 7
    while_loop                     shift and go to state 8
    println_statement              shift and go to state 9
    show_statement                 shift and go to state 10
    geo_statement                  shift and go to state 11
    datatype                       shift and go to state 13

state 27

    (15) assignment_after_declaration -> IDENTIFICADOR ASSIGN . expression
    (21) expression_assignment -> IDENTIFICADOR ASSIGN . expression
    (26) expression -> . INT
    (27) expression -> . FLOAT
    (28) expression -> . STRING
    (29) expression -> . IDENTIFICADOR
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression GT expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NE expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . MINUS expression

    INT             shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    IDENTIFICADOR   shift and go to state 38
    LPAREN          shift and go to state 44
    MINUS           shift and go to state 43

    expression                     shift and go to state 39

state 28

    (16) variable_declaration -> datatype IDENTIFICADOR . ASSIGN expression
    (17) variable_declaration -> datatype IDENTIFICADOR .

    ASSIGN          shift and go to state 45
    SEMICOLON       reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    LBRACE          reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    IDENTIFICADOR   reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    IF              reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    FOR             reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    WHILE           reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    PRINTLN         reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    SHOW            reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    GEO             reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    INT             reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    FLOAT           reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    STRING          reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    BOOL            reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    $end            reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)
    RBRACE          reduce using rule 17 (variable_declaration -> datatype IDENTIFICADOR .)

